Application is pretty stable. Test functionality is working properly. I now need to add content and ensure the other categories work. I also must add the interaction with the external data file and the random test functionality which shouldn't be too difficult.

--- a/AH Project Mock/Base.lproj/Main.storyboard
+++ b/AH Project Mock/Base.lproj/Main.storyboard
@@ -166,7 +166,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="32.799999999999997" y="33.733133433283363"/>
+            <point key="canvasLocation" x="-1430" y="1262"/>
         </scene>
         <!--Recursion View Controller-->
         <scene sceneID="S99-HQ-WGm">
@@ -591,11 +591,12 @@
                         <outlet property="questionText" destination="GDv-ml-UFK" id="DTN-SS-xSL"/>
                         <outlet property="relatedImage" destination="hd3-lu-h5C" id="NFA-VD-Axz"/>
                         <segue destination="Rk9-DA-scQ" kind="show" identifier="MultipleChoiceToTextResponse" id="mx5-4i-r5b"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="MultipleChoiceToHome" id="ncO-jD-dOD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Hls-u5-bS1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1801" y="609"/>
+            <point key="canvasLocation" x="3796" y="2271"/>
         </scene>
         <!--Text Response View Controller-->
         <scene sceneID="JXR-UH-bTA">
@@ -677,11 +678,128 @@
                         <outlet property="relatedImage" destination="mPN-hl-OvV" id="Y2L-aX-kOZ"/>
                         <outlet property="textResponseInput" destination="ism-lD-HFh" id="hLU-Z4-mcw"/>
                         <segue destination="6Dh-fa-UiX" kind="show" identifier="TextResponseToMultipleChoice" id="IQq-bS-Ijy"/>
+                        <segue destination="BYZ-38-t0r" kind="show" identifier="TextResponseToHome" id="wZ9-mz-bTZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="1Vv-GB-iRd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1801" y="-597"/>
+            <point key="canvasLocation" x="3796" y="-600"/>
+        </scene>
+        <!--Recursion View Controller-->
+        <scene sceneID="eDg-c2-bUL">
+            <objects>
+                <viewController id="HoS-9y-PEt" customClass="RecursionViewController" customModule="AH_Project_Mock" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="BXg-NA-nQO">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eB5-9G-lhi">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qqU-6j-V8r">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1200"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="banner" translatesAutoresizingMaskIntoConstraints="NO" id="Jx5-h5-mbP">
+                                                <rect key="frame" x="0.0" y="0.0" width="375" height="71"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="71" id="d3C-v0-mbU"/>
+                                                </constraints>
+                                            </imageView>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="EDUK8 Logo" translatesAutoresizingMaskIntoConstraints="NO" id="w21-x2-zbs">
+                                                <rect key="frame" x="140" y="16" width="94" height="50"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="50" id="JY5-ag-SW9"/>
+                                                    <constraint firstAttribute="height" constant="50" id="RfV-ZQ-bZB"/>
+                                                    <constraint firstAttribute="width" secondItem="w21-x2-zbs" secondAttribute="height" multiplier="47:25" id="VGB-yb-pat"/>
+                                                </constraints>
+                                            </imageView>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8T3-lk-U5p" customClass="RoundedButton" customModule="AH_Project_Mock" customModuleProvider="target">
+                                                <rect key="frame" x="47" y="1137" width="280" height="48"/>
+                                                <color key="backgroundColor" red="0.062745098040000002" green="0.20000000000000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="48" id="1bu-uB-zx8"/>
+                                                    <constraint firstAttribute="width" constant="280" id="Z3u-L1-Kyg"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                                <state key="normal" title="Start Test">
+                                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                                </state>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                        <real key="value" value="22"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                        <real key="value" value="2"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                    <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                        <color key="value" red="0.062745098040000002" green="0.20000000000000001" blue="0.26274509800000001" alpha="1" colorSpace="calibratedRGB"/>
+                                                    </userDefinedRuntimeAttribute>
+                                                </userDefinedRuntimeAttributes>
+                                                <connections>
+                                                    <action selector="startTestButtonPressed:" destination="HoS-9y-PEt" eventType="touchUpInside" id="XXY-r2-q29"/>
+                                                </connections>
+                                            </button>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sorting Algorithms" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rMH-DM-wYm">
+                                                <rect key="frame" x="56" y="79" width="263" height="39"/>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="28"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" lineBreakMode="tailTruncation" numberOfLines="9" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BfQ-bJ-dTN">
+                                                <rect key="frame" x="15" y="126" width="344" height="220"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="179" id="7L9-tu-7LV"/>
+                                                    <constraint firstAttribute="width" constant="344" id="sJ5-Sf-o7O"/>
+                                                </constraints>
+                                                <string key="text">Sorting algorithms are very important in the world of Computer Science and also in the real world. A lot of businesses and organisations use sorting algorithms to sort their data. Sorting data allows for it to be easily accessed and is sometimes neccessary for other algorithms to work, for example, binary search requires that the data be initially sorted.</string>
+                                                <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="rMH-DM-wYm" secondAttribute="trailing" constant="56" id="0RE-zx-90D"/>
+                                            <constraint firstAttribute="trailing" secondItem="8T3-lk-U5p" secondAttribute="trailing" constant="48" id="10X-JW-SZ7"/>
+                                            <constraint firstItem="Jx5-h5-mbP" firstAttribute="leading" secondItem="qqU-6j-V8r" secondAttribute="leading" id="6DV-ZG-Hwx"/>
+                                            <constraint firstItem="rMH-DM-wYm" firstAttribute="top" secondItem="Jx5-h5-mbP" secondAttribute="bottom" constant="8" id="8as-dL-mhc"/>
+                                            <constraint firstAttribute="trailing" secondItem="Jx5-h5-mbP" secondAttribute="trailing" id="8gO-xr-08M"/>
+                                            <constraint firstAttribute="bottom" secondItem="8T3-lk-U5p" secondAttribute="bottom" constant="15" id="9hu-uV-vVK"/>
+                                            <constraint firstItem="w21-x2-zbs" firstAttribute="top" secondItem="qqU-6j-V8r" secondAttribute="top" constant="16" id="JnP-4U-VRo"/>
+                                            <constraint firstItem="Jx5-h5-mbP" firstAttribute="top" secondItem="qqU-6j-V8r" secondAttribute="top" id="TAe-eh-4v5"/>
+                                            <constraint firstItem="w21-x2-zbs" firstAttribute="leading" secondItem="qqU-6j-V8r" secondAttribute="leading" constant="140" id="YzU-Px-ets"/>
+                                            <constraint firstItem="w21-x2-zbs" firstAttribute="width" secondItem="w21-x2-zbs" secondAttribute="height" multiplier="47:25" id="hCQ-8I-0vG"/>
+                                            <constraint firstAttribute="height" constant="1200" id="nsd-R3-e64"/>
+                                            <constraint firstItem="8T3-lk-U5p" firstAttribute="leading" secondItem="qqU-6j-V8r" secondAttribute="leading" constant="47" id="ph3-e6-x5H"/>
+                                            <constraint firstItem="rMH-DM-wYm" firstAttribute="leading" secondItem="qqU-6j-V8r" secondAttribute="leading" constant="56" id="s8e-6A-rwO"/>
+                                            <constraint firstAttribute="trailing" secondItem="w21-x2-zbs" secondAttribute="trailing" constant="141" id="yGq-Fd-637"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <color key="backgroundColor" red="0.96078431369999995" green="0.96078431369999995" blue="0.96078431369999995" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="qqU-6j-V8r" firstAttribute="top" secondItem="eB5-9G-lhi" secondAttribute="top" id="Jab-Qk-iF8"/>
+                                    <constraint firstItem="qqU-6j-V8r" firstAttribute="leading" secondItem="eB5-9G-lhi" secondAttribute="leading" id="SGh-4I-fwa"/>
+                                    <constraint firstAttribute="trailing" secondItem="qqU-6j-V8r" secondAttribute="trailing" id="gIJ-OH-dep"/>
+                                    <constraint firstAttribute="bottom" secondItem="qqU-6j-V8r" secondAttribute="bottom" id="y33-k8-07H"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="qqU-6j-V8r" firstAttribute="width" secondItem="BXg-NA-nQO" secondAttribute="width" id="2ht-P0-47e"/>
+                            <constraint firstItem="eB5-9G-lhi" firstAttribute="top" secondItem="BXg-NA-nQO" secondAttribute="top" id="8yq-MK-Q3j"/>
+                            <constraint firstItem="eB5-9G-lhi" firstAttribute="trailing" secondItem="rO3-3R-WzM" secondAttribute="trailing" id="CBI-bu-rHI"/>
+                            <constraint firstItem="eB5-9G-lhi" firstAttribute="bottom" secondItem="rO3-3R-WzM" secondAttribute="bottom" id="R8E-1t-aPL"/>
+                            <constraint firstItem="eB5-9G-lhi" firstAttribute="leading" secondItem="rO3-3R-WzM" secondAttribute="leading" id="aAq-lC-mTq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="rO3-3R-WzM"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="1200"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0Gn-fM-qqZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="968.79999999999995" y="1399.7001499250375"/>
         </scene>
     </scenes>
     <resources>
@@ -694,6 +812,7 @@
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="hpY-tH-tu2"/>
-        <segue reference="IQq-bS-Ijy"/>
+        <segue reference="V7i-ed-Vrc"/>
+        <segue reference="ncO-jD-dOD"/>
     </inferredMetricsTieBreakers>
 </document>
