--- a/AH Project Mock/Base.lproj/Main.storyboard
+++ b/AH Project Mock/Base.lproj/Main.storyboard
@@ -1388,7 +1388,7 @@
                                 </constraints>
                                 <state key="normal" image="whitehome"/>
                                 <connections>
-                                    <action selector="homeButtonPressed:" destination="FAE-96-azl" eventType="touchUpInside" id="lac-Y1-LU9"/>
+                                    <action selector="homeButtonPressed:" destination="FAE-96-azl" eventType="touchUpInside" id="v2L-UB-raV"/>
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="table" translatesAutoresizingMaskIntoConstraints="NO" id="2fH-BG-tdq">
